--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "ghost-on-heroku",
-  "description": "Just a blogging platform on Heroku.",
+  "description": "Just a blogging platform on Heroku with some hacks.",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/cobyism/ghost-on-heroku.git"
+    "url": "git://github.com/tonyrewin/ghost-on-heroku.git"
   },
   "bugs": "https://github.com/TryGhost/Ghost/issues",
   "private": true,
   "version": "1.7.1",
   "dependencies": {
-    "casper": "github:tryghost/Casper#2.1.0",
-    "ghost": "^1.8.0",
+    "ghost": "^1.24.6",
     "ghost-storage-adapter-s3": "^2.3.0",
     "mysql": "^2.14.1"
   },
