--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "private": true,
   "version": "1.7.1",
   "dependencies": {
+    "casper": "github:tryghost/Casper",
     "ghost": "^1.24.6",
-    "ghost-github": "tonyrewin/ghost-github",
+    "ghost-github": "github:tonyrewin/ghost-github",
     "mysql": "^2.15.0"
   },
   "engines": {
