--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
   "private": true,
   "version": "1.7.1",
   "dependencies": {
-    "casper": "github:tryghost/Casper",
+    "casper": "github:tonyrewin/casper-i18n",
     "ghost": "^1.24.6",
     "ghost-github": "github:tonyrewin/ghost-github",
     "mysql": "^2.15.0"
-  },
-  "engines": {
-    "node": "6.11.x"
   },
   "scripts": {
     "start": "node server.js"
