--- a/app.json
+++ b/app.json
@@ -19,6 +19,10 @@
     "GITHUB_TOKEN": {
       "description": "Set your token to enable Github file storage. Leave blank to disable file uploads.",
       "required": false
+    },
+    "GITHUB_USERNAME": {
+      "description": "Set your username to enable Github file storage. Leave blank to disable file uploads.",
+      "required": false
     }
   }
 }
